# pragma-monitoring

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  Cargo.toml  Dockerfile  Makefile  README.md  cloudbuild.yaml  compose.dev.yml  docker-compose.yml  evm_config.yaml  grafana.json  rust-toolchain.toml
.github/workflows/: bench.yml  docker-build.yml  gcp.yaml  linters-cargo.yml  linters.yml  pull-request.yml  release.yml  rust-build.yml
abi/: Pragma.json
benches/: coingecko_benchmarks.rs
grafana/provisioning/datasources/: prometheus_ds.yml
helm/: Chart.yaml  values.yaml
helm/templates/: ExternalSecret.yaml  SecretStore.yaml  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  secrets.yaml  service.yaml  serviceaccount.yaml
prometheus/: alertmanager.yml  alerts.rules.yml  prometheus.yml
prometheus/templates/: alert.tmpl  slack.tmpl
scripts/: db.sh  dev.sh  prom.sh
src/: coingecko.rs  config.rs  constants.rs  error.rs  lib.rs  main.rs  models.rs  process_data.rs  schema.rs  server.rs  types.rs  utils.rs
src/cairo/: types.rs
src/evm/: mod.rs  pragma.rs
src/indexing/: database_handler.rs  mod.rs  status.rs
src/monitoring/: balance.rs  data_providers_balance.rs  last_update.rs  lst.rs  metrics.rs  mod.rs  on_off_deviation.rs  price_deviation.rs  source_deviation.rs  time_last_update_source.rs  time_since_last_update.rs
src/processing/: api.rs  common.rs  dispatch.rs  evm.rs  future.rs  mod.rs  spot.rs  vrf.rs
src/tests/: lst_tests.rs  mod.rs  monitoring.rs
src/tests/common/: constants.rs  fixtures.rs  utils.rs
taplo/: README.md
tests/: monitoring.rs
tests/common/: fixtures.rs
