[package]
name = "pragma-monitoring"
version = "0.1.22"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pragma-common = { version = "0.4.1", features = ["telemetry"] }

arc-swap = "1.6.0"
axum = { version = "0.6", features = ["macros", "multipart"] }
axum-macros = "0.3"
bigdecimal = "0.4.1"
chrono = "0.4"
deadpool = { version = "0.9.3", features = ["managed"] }
diesel = { version = "2.1.0", features = [
  "postgres",
  "numeric",
  "chrono",
  "uuid",
  "serde_json",
] }
diesel-async = { version = "0.4.1", features = [
  "async-connection-wrapper",
  "deadpool",
  "postgres",
  "tokio",
] }
diesel_derives = "1.4.0"
diesel_migrations = "2"
dotenv = "0.15.0"
env_logger = "0.10.1"
futures = "0.3.28"
hyper = "0.14.27"
lazy_static = "1.4.0"
moka = { version = "0.12.8", features = ["future"] }
num-bigint = "0.4"
num-traits = "0.2"
phf = { version = "0.11", features = ["macros"] }
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.130" }
starknet = "0.17.0"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
url = "2.5.0"
uuid = { version = "1.4", features = ["fast-rng", "v4", "serde"] }

# David Bernard (sacre jojo)
axum-tracing-opentelemetry = "0.23.0"
opentelemetry = { version = "0.26.0", features = ["metrics", "logs"] }
opentelemetry-appender-tracing = { version = "0.26.0", default-features = false }
opentelemetry-otlp = { version = "0.26.0", features = [
  "tonic",
  "metrics",
  "logs",
] }
opentelemetry-semantic-conventions = { version = "0.26.0" }
opentelemetry-stdout = { version = "0.26.0" }
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio", "logs"] }
tracing = "0.1"
tracing-core = { version = "0.1.32", default-features = false }
tracing-opentelemetry = "0.27.0"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "registry",
  "std",
] }


[dev-dependencies]
rstest = "0.18.2"
mockall = "0.13.1"
async-trait = "0.1.68"
